Fixed footer covering content on small screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,10 +32,6 @@ footer{
   body {
     padding: 60px 0 270px;
   }
-  footer{
-    position: absolute;
-    bottom: 0;
-  }
   .platform-column{
     min-height: 640px;
     border-bottom: 1px solid #eee;
